<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_margin="5dp"
    android:orientation="horizontal">
    <LinearLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="#4B000000"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_eat"
            />
        <TextView
            android:id="@+id/serving"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:textSize="20sp"
            android:textColor="#ffffff"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/persons"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textColor="#ffffff"
            />
    </LinearLayout>
    <ImageView
        android:contentDescription="@string/recipe_img"
        android:id="@+id/img"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="#ffffff"
        android:background="#4B000000"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>