<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:padding="3dp"
    android:background="#ffffff"
    android:id="@+id/widget"
   >

    <ImageView
        android:contentDescription="@string/image"
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:src="@drawable/play"/>
    <TextView
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_s_to_eat"
        android:gravity="center"
        android:textColor="#000000"
        android:background="#a0ffffff"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        />
    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/meal"
        android:textColor="#000000"
        android:background="#a0ffffff"
        android:layout_alignParentBottom="true"
        />



</RelativeLayout>