<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:background="#000000"
                android:textColor="#ffffff"
                android:textSize="20sp"
                />
            <TextView android:id="@+id/player_state_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:text="@string/undefined"
                />

        </LinearLayout>
        <TextView
            android:id="@+id/title"
            android:text="@string/video_number_1"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_margin="10dp"
            android:maxLines="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />





        <com.google.android.exoplayer2.ui.AspectRatioFrameLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
             >
            <LinearLayout
                android:id="@+id/loading_indicator"
                android:background="#000000"
                android:gravity="center"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.wang.avi.AVLoadingIndicatorView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:indicatorName="BallClipRotateIndicator"
                    />
            </LinearLayout>
            <LinearLayout
                android:visibility="gone"
                android:id="@+id/error"
                android:background="#000000"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:text="@string/unknown_error"
                   android:textColor="#ffffff"
                   android:gravity="center"
                   android:textSize="25sp"
                   />
            </LinearLayout>
            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/simpleExoPlayerView"
                android:layout_width="match_parent"

                android:layout_height="match_parent">

            </com.google.android.exoplayer2.ui.SimpleExoPlayerView>
        </com.google.android.exoplayer2.ui.AspectRatioFrameLayout>





       <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
         >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/long_description"
                android:layout_margin="10dp"
                android:textSize="15sp"
                />
        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp"
            android:gravity="center"
            android:layout_gravity="center"
            >
            <TextView
                android:id="@+id/index"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_1"
                android:textSize="18sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/left_slash"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_5"
                android:textSize="18sp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/previous"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/previous"
                android:gravity="center"
                android:background="@color/active"
                android:textSize="20sp"
                />
            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="#000000"
                android:layout_margin="5dp"
                />
            <TextView
                android:id="@+id/next"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/next"
                android:gravity="center"
                android:background="@color/active"
                android:textSize="20sp"
                />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
