<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/_250"
            />
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/measure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/g"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/ingredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bittersweet_chocolate_60_70_cacao"
                android:textSize="15sp"
                />
        </LinearLayout>

    </LinearLayout>
   <View
       android:layout_width="match_parent"
       android:layout_height="1dp"
       android:layout_marginTop="10dp"
       android:background="#000000"
       />
</LinearLayout>